Fixed dotlist in About Page and did alignment in HomePage -> Logo and texts are the same now

--- a/client/src/Components/Homepage.css
+++ b/client/src/Components/Homepage.css
@@ -29,6 +29,7 @@
     text-align: left;
 }
 
+
 /* LIKE USUAL */
 
 .header {
@@ -375,10 +376,12 @@ nav .fa-solid{
 /* ANYTHING */
 
 .anything {
-    width:80%;
+    width:100%;
     margin: auto;
     text-align: center;
+
 }
+
 
 h1{
     font-size: 36px;
@@ -394,6 +397,7 @@ h1{
     margin:auto;
 }
 
+
 .anything p {
     font-size: 14px;
     font-weight: 300;
@@ -403,6 +407,7 @@ h1{
     text-align: left;
     text-align: justify;
 }
+
 
 .nearlyEnd {
     width: 100%;
